--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>숫자 맞추기 게임!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>숫자 맞추기 게임!</h1>
+    <div class="title-area">
+    <h1 class="py-3 mt-5">숫자 맞추기 게임!</h1>
     <div id="result-area">결과가 나온다</div>
-    <input type="number" id="user-input">
-    <button id="play-button">Go!</button>
+    <div id="chance-area">남은 기회 : 3번</div>
+    </div>
+    <input type="number" id="user-input" class="m-3">
+    <div class="button-area">
+    <button type="button" class="btn btn-outline-primary m-1" id="play-button">Go!</button>
+    <button type="button" class="btn btn-outline-secondary m-1" id="reset-button">리셋!</button>
+    </div>
+    <div id="answer-area" class="mt-5">사실 정답은...</div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
